replace List get(0) with getFirst()